revisão de código

--- a/app/assets/javascripts/views/cadastroEvento/CadastrodeEventos.html
+++ b/app/assets/javascripts/views/cadastroEvento/CadastrodeEventos.html
@@ -17,7 +17,7 @@
     <input class="form-control" type="date" ng-model="vm.dataFim"> <br>
     <label for="time"> Hora de Inicio </label>
     <input class="form-control" type="time" ng-model="vm.horaInicio"> <br>
-    <label for="time"> Hora de Término </label>>
+    <label for="time"> Hora de Término </label>
     <input class="form-control" type="time" ng-model="vm.horaFim"> <br>
     <label for="local"> Local </label>
     <textarea class="form-control" ng-model="vm.local"></textarea> <br>
