--- a/app/views/front/index.html.erb
+++ b/app/views/front/index.html.erb
@@ -1,9 +1,9 @@
 <body ng-app="pdApp" ng-style="{'background-image': 'url(/assets/fundo.jpg)'}" 'no-repeat center center fixed' 'background-size':'10%'>
   <h1>
-    <a href="#!/cadastrarEvento">/cadastrarEvento</a>
-    <a href="#!/home">/home</a>
-    <a href="#!/login">/login</a>
-    <a href="#!/cadastrarUser">/cadastrarUser</a>
+    <a href="#!/cadastrarEvento/">/cadastrarEvento</a>
+    <a href="#!/home/">/home</a>
+    <a href="#!/login/">/login</a>
+    <a href="#!/cadastrarUser/">/cadastrarUser</a>
   </h1>
   <br>
   <div style="text-align: center;">
