--- a/app/assets/javascripts/views/cadastroUser/cadastroadm.html
+++ b/app/assets/javascripts/views/cadastroUser/cadastroadm.html
@@ -1,29 +1,45 @@
 <meta charset="utf-8">
 <div class="container " style="position:relative;transform: translate(-50%, -0%); width:25%;top:5%; ">
 	<div class="form-group form-group-sm">
-		<form>
+		<form name="form">
 			<div style="text-align: center; font-family: inherit;">
 				<h2>Cadastre-se<small><br>(Preencha os campos abaixo)</small> </h2>
 			</div>
 			<div class="form-group form-group-sm">
 				<label class="col-sm-6 control-label" for="formGroupInputSmall">Digite Nome</label>
-				<input class="form-control" type="text" placeholder="Nome Completo" ng-model="vm.name"><br>
+				<input class="form-control" type="text" name="user" placeholder="Nome Completo" ng-model="vm.name" required><br>
+			</div>
+			<div role="alert">
+				<span class="error" ng-show="form.user.$error.required">
+       			Required!</span>
 			</div>
 			<div class="form-group form-group-sm">
 				<label class="col-sm-8 control-label" for="formGroupInputSmall">Escolha uma senha</label>
-				<input class="form-control" type="password" placeholder="Senha" ng-model="vm.password"><br>
+				<input class="form-control" type="password" name="senha" placeholder="Senha" ng-model="vm.password" ng-minlength="6" required><br>
+			</div>
+			<div role="alert">
+				<span class="error" ng-show="form.senha.$error.required">
+					obrigatório</span>
+				<span class="error" ng-show="form.senha.$error.minlength">
+					senha curta</span>
 			</div>
 			<div class="form-group form-group-sm">
 				<label class="col-sm-6 control-label" for="formGroupInputSmall">Confirmar senha</label>
-				<input class="form-control" type="password" placeholder="Confirmar Senha" ng-model="vm.confirmaSenha"><br>
+				<input class="form-control" type="password" name="confirma" placeholder="Confirmar Senha" ng-model="vm.confirmaSenha" ng-minlength="6" password-confirm match-target="senha" required><br>
+			</div>
+			<div role="alert">
+				<span class="error" ng-show="form.confirma.$error.required">
+					obrigatório</span>
+				<span class="error" ng-show="form.confirma.$error.match">
+					não bate</span>
 			</div>
 			<div class="form-group form-group-sm">
 				<label class="col-sm-10 control-label" for="formGroupInputSmall">Número da matrícula</label>
-				<input class="form-control" type="text" placeholder="Matricula" ng-model="vm.matricula"><br>
+				<input class="form-control" type="text" placeholder="Matricula" ng-model="vm.matricula" required><br>
 			</div>
 			<div class="form-group form-group-sm">
 				<label class="col-sm-5 control-label" for="formGroupInputSmall">E-mail</label>
-				<input class="form-control" type="text" placeholder="E-mail" ng-model="vm.email"><br>
+				<input class="form-control" type="email" placeholder="E-mail" ng-model="vm.email" required><br>
 			</div>
 		</form>
 		<div style="text-align-last: right">
