--- a/app/assets/javascripts/views/cadastroEvento/CadastrodeEventos.html
+++ b/app/assets/javascripts/views/cadastroEvento/CadastrodeEventos.html
@@ -5,6 +5,7 @@
 <div class="container " style="position:relative;transform: translate(-50%, -0%); width:30%;top:5%;background-color:#fff ">
   <form>
     <div ng-if="vm.mensagem">{{vm.mensagem}}</div>
+    <input type="text" ng-model="vm.mensagem"><br>
     <label for="usr"> Nome </label>
     <input class="form-control" type="text" ng-model="vm.nome"><br>
     <label for="tipo"> Tipo </label>
@@ -30,7 +31,7 @@
     <label for="lg"> Longitude</label>
     <input class="form-control" type="text" ng-model="vm.longitude"> <br>
     <br>
-    <button class="btn btn-info" ng-click="vm.cadastrarEvento()">OK</button>
+    <button class="btn btn-info" ng-click="vm.cadastrarEvento()" ng-disabled="vm.botao">OK</button>
   </form>
   <br><br>
 </div>
