--- a/app/assets/javascripts/views/cadastroUser/cadastroadm.html
+++ b/app/assets/javascripts/views/cadastroUser/cadastroadm.html
@@ -1,7 +1,6 @@
-<meta charset="utf-8">
-<div class="container " style="position:relative;transform: translate(-50%, -0%); width:25%;top:5%; ">
+<div class="container " style="position:relative;transform: translate(0%, 0%); width:25%;top:5%; ">
 	<div class="form-group form-group-sm">
-		<form name="form">
+		<form name="vm.form">
 			<div style="text-align: center; font-family: inherit;">
 				<h2>Cadastre-se<small><br>(Preencha os campos abaixo)</small> </h2>
 			</div>
@@ -10,36 +9,44 @@
 				<input class="form-control" type="text" name="user" placeholder="Nome Completo" ng-model="vm.name" required><br>
 			</div>
 			<div role="alert">
-				<span class="error" ng-show="form.user.$error.required">
-       			Required!</span>
+				<span class="error" ng-show="vm.form.user.$error.required">
+       			Campo obrigatório</span>
 			</div>
 			<div class="form-group form-group-sm">
 				<label class="col-sm-8 control-label" for="formGroupInputSmall">Escolha uma senha</label>
-				<input class="form-control" type="password" name="senha" placeholder="Senha" ng-model="vm.password" ng-minlength="6" required><br>
+				<input class="form-control" type="password" name="senha" placeholder="Senha" ng-model="vm.senha" ng-minlength="5" required><br>
 			</div>
 			<div role="alert">
-				<span class="error" ng-show="form.senha.$error.required">
-					obrigatório</span>
-				<span class="error" ng-show="form.senha.$error.minlength">
-					senha curta</span>
+				<span class="error" ng-show="vm.form.senha.$error.required">
+					Campo obrigatório</span>
+				<span class="error" ng-show="vm.form.senha.$error.minlength">
+					A senha deve conter no mínimo 5 caracteres</span>
 			</div>
 			<div class="form-group form-group-sm">
 				<label class="col-sm-6 control-label" for="formGroupInputSmall">Confirmar senha</label>
 				<input class="form-control" type="password" name="confirma" placeholder="Confirmar Senha" ng-model="vm.confirmaSenha" ng-minlength="6" password-confirm match-target="senha" required><br>
 			</div>
 			<div role="alert">
-				<span class="error" ng-show="form.confirma.$error.required">
-					obrigatório</span>
-				<span class="error" ng-show="form.confirma.$error.match">
-					não bate</span>
+				<span class="error" ng-show="vm.form.confirma.$error.required">
+					Campo obrigatório</span>
+				<span class="error" ng-show="vm.form.confirma.$error.match">
+					As senhas não correspondem</span>
 			</div>
 			<div class="form-group form-group-sm">
 				<label class="col-sm-10 control-label" for="formGroupInputSmall">Número da matrícula</label>
-				<input class="form-control" type="text" placeholder="Matricula" ng-model="vm.matricula" required><br>
+				<input class="form-control" name="matricula" type="text" placeholder="Matricula" ng-model="vm.matricula" required><br>
+			</div>
+			<div role="alert">
+				<span class="error" ng-show="vm.form.matricula.$error.required">
+       			Campo obrigatório</span>
 			</div>
 			<div class="form-group form-group-sm">
 				<label class="col-sm-5 control-label" for="formGroupInputSmall">E-mail</label>
-				<input class="form-control" type="email" placeholder="E-mail" ng-model="vm.email" required><br>
+				<input class="form-control" name="imei" type="email" placeholder="E-mail" ng-model="vm.email" required><br>
+			</div>
+			<div role="alert">
+				<span class="error" ng-show="vm.form.imei.$error.required">
+       			Campo obrigatório</span>
 			</div>
 		</form>
 		<div style="text-align-last: right">
@@ -47,5 +54,3 @@
 		</div>
 	</div>
 </div>
-
-</html>
