--- a/app/assets/javascripts/views/login/login.html
+++ b/app/assets/javascripts/views/login/login.html
@@ -2,24 +2,35 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
 
-<div class="container " style="position:relative;transform: translate(-50%, -0%); width:25%;top:25%; ">
+<div class="container " style="position:relative;transform: translate(0%, 0%); width:25%;top:25%; ">
 	<div class="box-parent-login ">
 		<div class="well bg-white box-login">
-			<form role="form">
+			<form role="form" name="vm.form">
 				<fieldset>
 
 					<div ng-if="vm.mensagem">{{vm.mensagem}}</div>
 
 					<div class="form-group ls-login-user">
 						<label for="userLogin">Usuário</label>
-						<input class="form-control ls-login-bg-user input-lg" id="userLogin" type="text" aria-label="Usuário" placeholder="Usuário"
-						 ng-model="vm.login">
+						<input class="form-control ls-login-bg-user input-lg" name="user" id="userLogin" type="text" aria-label="Usuário" placeholder="Usuário"
+						 ng-model="vm.login" required>
+					</div>
+					<div role="alert">
+						<span class="error" ng-show="vm.form.user.$error.required">
+       						Campo obrigatório</span>
 					</div>
 
 					<div class="form-group ls-login-password">
 						<label for="userPassword">Senha</label>
-						<input class="form-control ls-login-bg-password input-lg" id="userPassword" type="password" aria-label="Senha" placeholder="Senha"
-						 ng-model="vm.senha">
+						<input class="form-control ls-login-bg-password input-lg" name="senha" id="userPassword" type="password" aria-label="Senha" placeholder="Senha"
+						 ng-model="vm.senha" ng-minlength="5" required>
+					</div>
+
+					<div role="alert">
+						<span class="error" ng-show="vm.form.senha.$error.required">
+       						Campo obrigatório</span>
+						<span class="error" ng-show="vm.form.senha.$error.minlength">
+							Senha curta</span>
 					</div>
 
 					<a href="#" class="ls-login-forgot">Esqueci minha senha</a>
