rascunho de navegabilidade

--- a/app/assets/javascripts/views/login/login.html
+++ b/app/assets/javascripts/views/login/login.html
@@ -22,8 +22,8 @@
 
 					<div class="form-group ls-login-password">
 						<label for="userPassword">Senha</label>
-						<input class="form-control ls-login-bg-password input-lg" name="senha" id="userPassword" type="password" aria-label="Senha" placeholder="Senha"
-						 ng-model="vm.senha" ng-minlength="5" required>
+						<input class="form-control ls-login-bg-password input-lg" name="senha" id="userPassword" type="password" aria-label="Senha"
+						 placeholder="Senha" ng-model="vm.senha" ng-minlength="5" required>
 					</div>
 
 					<div role="alert">
