o switch nao deu

--- a/app/assets/javascripts/views/cadastroEvento/CadastrodeEventos.html
+++ b/app/assets/javascripts/views/cadastroEvento/CadastrodeEventos.html
@@ -2,10 +2,9 @@
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
 
-<div class="container " style="position:relative;transform: translate(-50%, -0%); width:30%;top:5%;background-color:#fff ">
+<div class="container " style="position:relative; width:30%;top:5%;background-color:#fff ">
   <form name="vm.form">
     <div ng-if="vm.mensagem">{{vm.mensagem}}</div>
-    <input type="text" ng-model="vm.mensagem"><br>
 
     <label for="usr"> Nome </label>
     <input class="form-control" name="nome" type="text" ng-model="vm.nome" required><br>
