--- a/app/assets/javascripts/views/cadastroEvento/CadastrodeEventos.html
+++ b/app/assets/javascripts/views/cadastroEvento/CadastrodeEventos.html
@@ -1,12 +1,8 @@
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta http-equiv="X-UA-Compatible" content="ie=edge">
-
-
 <div class="container " style="position:relative; width:30%;top:5%;background-color:#fff ">
   <form name="vm.form">
     <div ng-if="vm.mensagem">{{vm.mensagem}}</div>
 
-    <label for="usr"> Nome </label>
+    <label for="nome"> Nome </label>
     <input class="form-control" name="nome" type="text" ng-model="vm.nome" required><br>
     <div role="alert">
       <span class="error" ng-show="vm.form.nome.$error.required">
@@ -14,33 +10,34 @@
     </div>
 
     <label for="tipo"> Tipo </label>
-    <input class="form-control" type="text" ng-model="vm.tipo"><br>
+    <input class="form-control" type="text" name="tipo" ng-model="vm.tipo" required><br>
+    <div role="alert">
+      <span class="error" ng-show="vm.form.tipo.$error.required">
+        Campo obrigatório</span>
+    </div>
 
-    <label for="pessoa"> Pessoa Evento </label>
-    <input class="form-control" type="text"> <br>
-
-    <label for="date"> Data de inicio </label>
+    <label for="data-inicio"> Data de inicio </label>
     <input class="form-control" name="data-inicio" type="date" ng-model="vm.dataInicio" required> <br>
     <div role="alert">
       <span class="error" ng-show="vm.form.data-inicio.$error.required">
         Campo obrigatório</span>
     </div>
 
-    <label for="date"> Data de término </label>
+    <label for="data-termino"> Data de término </label>
     <input class="form-control" name="data-termino" type="date" ng-model="vm.dataFim" required> <br>
     <div role="alert">
       <span class="error" ng-show="vm.form.data-termino.$error.required">
         Campo obrigatório</span>
     </div>
 
-    <label for="time"> Hora de Inicio </label>
+    <label for="hora-inicio"> Hora de Inicio </label>
     <input class="form-control" name="hora-inicio" type="time" ng-model="vm.horaInicio" required> <br>
     <div role="alert">
       <span class="error" ng-show="vm.form.hora-inicio.$error.required">
         Campo obrigatório</span>
     </div>
 
-    <label for="time"> Hora de Término </label>
+    <label for="hora-termino"> Hora de Término </label>
     <input class="form-control" name="hora-termino" type="time" ng-model="vm.horaFim" required> <br>
     <div role="alert">
       <span class="error" ng-show="vm.form.hora-termino.$error.required">
@@ -48,19 +45,39 @@
     </div>
 
     <label for="local"> Local </label>
-    <textarea class="form-control" name="local" ng-model="vm.local"></textarea> <br>
+    <textarea class="form-control" name="local" ng-model="vm.local" required></textarea> <br>
+    <div role="alert">
+      <span class="error" ng-show="vm.form.local.$error.required">
+        Campo obrigatório</span>
+    </div>
 
-    <label for="dsç"> Descrição </label>
-    <textarea class="form-control" ng-model="vm.descricao"></textarea> <br>
+    <label for="desc"> Descrição </label>
+    <textarea class="form-control" name="desc" ng-model="vm.descricao" required></textarea> <br>
+    <div role="alert">
+      <span class="error" ng-show="vm.form.desc.$error.required">
+        Campo obrigatório</span>
+    </div>
 
     <label for="qr"> Qrcode </label>
-    <input class="form-control" type="text" ng-model="vm.QR"> <br>
+    <input class="form-control" type="text" name="qr" ng-model="vm.QR" required> <br>
+    <div role="alert">
+      <span class="error" ng-show="vm.form.qr.$error.required">
+        Campo obrigatório</span>
+    </div>
 
-    <label for="lt"> Latitude </label>
-    <input class="form-control" type="text" ng-model="vm.latitude"> <br>
+    <label for="latitude"> Latitude </label>
+    <input class="form-control" type="text" name="latitude" ng-model="vm.latitude" required> <br>
+    <div role="alert">
+      <span class="error" ng-show="vm.form.latitude.$error.required">
+        Campo obrigatório</span>
+    </div>
 
-    <label for="lg"> Longitude</label>
-    <input class="form-control" type="text" ng-model="vm.longitude"> <br>
+    <label for="longitude"> Longitude</label>
+    <input class="form-control" type="text" name="longitude" ng-model="vm.longitude" required> <br>
+    <div role="alert">
+      <span class="error" ng-show="vm.form.longitude.$error.required">
+        Campo obrigatório</span>
+    </div>
 
     <br>
     <button class="btn btn-info" ng-click="vm.cadastrarEvento()" ng-disabled="vm.botao">OK</button>
