--- a/app/views/front/index.html.erb
+++ b/app/views/front/index.html.erb
@@ -1,10 +1,5 @@
 <body ng-app="pdApp" ng-style="{'background-image': 'url(/assets/fundo.jpg)'}" 'no-repeat center center fixed' 'background-size':'10%'>
-  <h1>
-    <a href="#!/cadastrarEvento/">/cadastrarEvento</a>
-    <a href="#!/home/">/home</a>
-    <a href="#!/login/">/login</a>
-    <a href="#!/cadastrarUser/">/cadastrarUser</a>
-  </h1>
+  <div ng-include="'nav/_nav.html'"></div>
   <br>
   <div style="text-align: center;">
     <img ng-src="/assets/logotipo-nexti.png" alt="NExTI - Nucleo de Extensão em Tecnologia da Informação">
