HTML - mudança de background e ajuste de posição.
Nav tava desajustado, e o background não estava de acordo com o mobile.

--- a/app/assets/javascripts/views/cadastroEvento/CadastrodeEventos.html
+++ b/app/assets/javascripts/views/cadastroEvento/CadastrodeEventos.html
@@ -2,7 +2,8 @@
 
 
 
-<div class="container " style="position:relative; width:30%;top:0%;background-color:#fff; ">
+<div class="container " style="position:relative;transform: translate(0%, 1%); width:30%;top:0%;background-color:			#808080; ">
+   <img ng-src="/assets/logotipo-nexti.png" alt="NExTI - Nucleo de Extensão em Tecnologia da Informação">
   <form name="vm.form">
     <div ng-if="vm.mensagem">{{vm.mensagem}}</div>
 
