--- a/app/assets/javascripts/views/cadastroUser/cadastroadm.html
+++ b/app/assets/javascripts/views/cadastroUser/cadastroadm.html
@@ -1,11 +1,12 @@
 
 
 
-<div class="container " style="position:relative;transform: translate(0%, 0%); width:30%;top:5%; background-color:aliceblue">
+<div class="container " style="position:relative;transform: translate(0%, 0%); width:30%;top:5%; background-color:	#808080">
+	 <img ng-src="/assets/logotipo-nexti.png" alt="NExTI - Nucleo de Extensão em Tecnologia da Informação">
 	<div class="form-group form-group-sm">
 		<form name="vm.form">
 			<div style="text-align: center; font-family: inherit;">
-				<h2>Cadastre-se<small><br>(Preencha os campos abaixo)</small> </h2>
+				<h2 style="color:black">Cadastre-se<small><br><div style="color:black">(Preencha os campos abaixo)</div></small> </h2>
 			</div>
 			<div class="form-group form-group-sm">
 				<label class="col-sm-6 control-label" for="formGroupInputSmall">Digite Nome</label>
