--- a/app/assets/javascripts/views/home/home.html
+++ b/app/assets/javascripts/views/home/home.html
@@ -2,13 +2,16 @@
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
 <div class="jumbotron" style="background-color: transparent">
-  <h1 class="display-3" style="color:#F8F8FF;text-align: center;font-family: castellar">BEM-VINDO!</h1>
+  <h1 class="display-3" style="color:black;text-align: center;font-family: castellar">BEM-VINDO!</h1>
+  
 </div>
-
-<div class="list-group" style="position:relative;left:50%;transform: translate(-50%, -0%); width:25%;top:30%;text-align: center ">
+<div class="list-group" style="background-color:grey;position:relative;left:50%;transform: translate(-50%, -0%); width:25%;top:30%;text-align: center ">
+  <div style="backgroud-color:grey">
   <li class="list-group-item list-group-item-info">Menu</li>
   <a href="#!/cadastrarEvento/" class="list-group-item">Cadastrar evento</a>
   <a href="#!/cadastrarUser/" class="list-group-item">Cadastrar perfil do usuário</a>
   <a href="#!" class="list-group-item">Relatorio </a>
   <a href="#" class="list-group-item">Gerar Qrcode </a>
 </div>
+</div>
+ 
