--- a/app/assets/javascripts/views/login/login.html
+++ b/app/assets/javascripts/views/login/login.html
@@ -2,7 +2,7 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
 
-<div class="container " style="position:relative;transform: translate(0%, 0%); width:30%;top:25%; ">
+<div class="container " style="position:relative;transform: translate(0%, 10%); width:30%;top:25%; background-color:	#808080">
 	
     <img ng-src="/assets/logotipo-nexti.png" alt="NExTI - Nucleo de Extensão em Tecnologia da Informação">
  
