--- a/app/views/front/index.html.erb
+++ b/app/views/front/index.html.erb
@@ -1,4 +1,4 @@
-<body ng-app="pdApp" ng-style="{'background-image': 'url(/assets/fundo.jpg)'}" 'no-repeat center center fixed' 'background-size':'10%'>
+<body ng-app="pdApp" 'no-repeat center center fixed' 'background-size':'10%'>
   
  
   
