removido devise, .value pegando

--- a/app/views/front/index.html.erb
+++ b/app/views/front/index.html.erb
@@ -1,5 +1,5 @@
 <body ng-app="pdApp" ng-style="{'background-image': 'url(/assets/fundo.jpg)'}" 'no-repeat center center fixed' 'background-size':'10%'>
-  <div ng-include="'nav/_nav.html'"></div>
+  <span ng-include="'views/nav/nav.html'"></span>
   <br>
   <div style="text-align: center;">
     <img ng-src="/assets/logotipo-nexti.png" alt="NExTI - Nucleo de Extensão em Tecnologia da Informação">
