--- a/app/assets/javascripts/views/login/login.html
+++ b/app/assets/javascripts/views/login/login.html
@@ -1,6 +1,4 @@
-<meta charset="UTF-8">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-
+<button ng-click="vm.teste()">teste</button>
 
 <div class="container " style="position:relative;transform: translate(0%, 0%); width:25%;top:25%; ">
 	<div class="box-parent-login ">
