--- a/app/assets/javascripts/views/nav/nav.html
+++ b/app/assets/javascripts/views/nav/nav.html
@@ -1,10 +1,10 @@
-<div class="collapse navbar-collapse pull-right" ng-controller="NavCtrl">
+<div class="collapse navbar-collapse pull-right" ng-controller="NavController as navVM">
     <ul class="nav navbar-nav">
-        <li ng-show="navVM.signedIn()"><a href="#!/cadastrarEvento/">/cadastrarEvento</a></li>
-        <li ng-show="navVM.signedIn()"><a href="#!/home/">/home</a></li>
-        <li ng-hide="navVM.signedIn()"><a href="#!/login/">/login</a></li>
-        <li ng-show="navVM.signedIn()"><a href="#!/cadastrarUser/">/cadastrarUser</a></li>
-        <li ng-show="navVM.signedIn()"><a href="#!/">{{ navVM.user }}</a></li>
-        <li ng-show="navVM.signedIn()"><a ng-click="navVM.logout()">Log Out</a></li>
+        <li><a href="#!/cadastrarEvento/">/cadastrarEvento</a></li>
+        <li><a href="#!/home/">/home</a></li>
+        <li><a href="#!/login/">/login</a></li>
+        <li><a href="#!/cadastrarUser/">/cadastrarUser</a></li>
+        <li><a href="#!/">{{ navVM.token.nome }}</a></li>
+        <li><a ng-click="navVM.teste()">Log Out</a></li>
     </ul>
 </div>
