--- a/app/views/front/index.html.erb
+++ b/app/views/front/index.html.erb
@@ -1,23 +1,43 @@
 <body ng-app="pdApp" 'no-repeat center center fixed' 'background-size':'10%'>
   
- 
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+</head>
   
-   <nav class="navbar navbar-inverse navbar-fixed-top">
+  
+
+
+<nav class="navbar navbar-inverse navbar-fixed-top">
   <div class="container-fluid">
     <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>                        
+      </button>
       <a class="navbar-brand" href="#!/home/">Ponto Dinâmico</a>
     </div>
-    <ul class="nav navbar-nav">
-      <li class="active"><a href="#!/home/">Home</a></li>
-      <li><a href="#!/cadastrarEvento/">Cadastrar Evento</a></li>
-      <li><a href="#!/cadastrarUser/">Cadastrar Usuário</a></li>
-    </ul>
-    <ul class="nav navbar-nav navbar-right">
-      <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-      <li><a href="#!/login/"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-    </ul>
+    <div class="collapse navbar-collapse" id="myNavbar">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="#!/home/">Home</a></li>
+        <li class="dropdown">
+          <a class="dropdown-toggle" data-toggle="dropdown" href="#">Relatório <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="#">Usuários</a></li>
+            <li><a href="#">Eventos</a></li>
+         
+          </ul>
+        </li>
+        <li><a href="#!/cadastrarEvento/">cadastrarEvento</a></li>
+        <li><a href="#!/cadastrarUser/">cadastrarUser</a></li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+        <li><a href="#!/login/"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+      </ul>
+    </div>
   </div>
 </nav>
-
+  
   <ui-view></ui-view>
 </body>
