session para teste

--- a/app/views/usuarios/_form.html.erb
+++ b/app/views/usuarios/_form.html.erb
@@ -17,8 +17,8 @@
   </div>
 
   <div class="field">
-    <%= f.label :senha %>
-    <%= f.text_field :senha %>
+    <%= f.label :password %>
+    <%= f.text_field :password %>
   </div>
 
   <div class="field">
