--- a/app/views/usuarios/index.html.erb
+++ b/app/views/usuarios/index.html.erb
@@ -6,7 +6,7 @@
   <thead>
     <tr>
       <th>Nome</th>
-      <th>Senha</th>
+      <th>password</th>
       <th>Email</th>
       <th>Matricula</th>
       <th>Mac</th>
@@ -19,7 +19,7 @@
     <% @usuarios.each do |usuario| %>
       <tr>
         <td><%= usuario.nome %></td>
-        <td><%= usuario.senha %></td>
+        <td><%= usuario.password %></td>
         <td><%= usuario.email %></td>
         <td><%= usuario.matricula %></td>
         <td><%= usuario.mac %></td>
