--- a/app/views/usuarios/show.html.erb
+++ b/app/views/usuarios/show.html.erb
@@ -6,8 +6,8 @@
 </p>
 
 <p>
-  <strong>Senha:</strong>
-  <%= @usuario.senha %>
+  <strong>password:</strong>
+  <%= @usuario.password %>
 </p>
 
 <p>
