HTML - layout edituser e ajuste de layout geral

--- a/app/assets/javascripts/views/cadastroEvento/CadastrodeEventos.html
+++ b/app/assets/javascripts/views/cadastroEvento/CadastrodeEventos.html
@@ -2,8 +2,8 @@
 
 
 
-<div class="container " style="position:relative;transform: translate(0%, 1%); width:30%;top:0%;background-color:			#808080; ">
-   <img ng-src="/assets/logotipo-nexti.png" alt="NExTI - Nucleo de Extensão em Tecnologia da Informação">
+<div class="container " style="position:relative;transform: translate(0%, 5%); width:50%;top:0%;background-color:			#fafafa">
+   <img ng-src="/assets/logotipo-nexti.png" alt="NExTI - Nucleo de Extensão em Tecnologia da Informação" style="position:relative;transform: translate(35%, 0%)">
   <form name="vm.form">
     <div ng-if="vm.mensagem">{{vm.mensagem}}</div>
 
@@ -85,7 +85,7 @@
     </div>
 
     <br>
-    <button class="btn btn-info" ng-click="vm.cadastrarEvento()" ng-disabled="vm.botao">OK</button>
+    <button class="btn btn-info" ng-click="vm.cadastrarEvento()" ng-disabled="vm.botao" style="background-color:#007db7">OK</button>
 
   </form> 
   <br><br>
