--- a/app/assets/javascripts/views/cadastroUser/cadastroadm.html
+++ b/app/assets/javascripts/views/cadastroUser/cadastroadm.html
@@ -1,8 +1,8 @@
 
 
 
-<div class="container " style="position:relative;transform: translate(0%, 0%); width:30%;top:5%; background-color:	#808080">
-	 <img ng-src="/assets/logotipo-nexti.png" alt="NExTI - Nucleo de Extensão em Tecnologia da Informação">
+<div class="container " style="position:relative;transform: translate(0%, 10%); width:50%;top:5%; background-color:	#fafafa">
+	 <img ng-src="/assets/logotipo-nexti.png" alt="NExTI - Nucleo de Extensão em Tecnologia da Informação" style="position:relative;transform: translate(40%, 0%)">
 	<div class="form-group form-group-sm">
 		<form name="vm.form">
 			<div style="text-align: center; font-family: inherit;">
