--- a/app/assets/javascripts/views/home/home.html
+++ b/app/assets/javascripts/views/home/home.html
@@ -1,16 +1,39 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-<div class="jumbotron" style="background-color: transparent">
-  <h1 class="display-3" style="color:black;text-align: center;font-family: castellar">BEM-VINDO!</h1>
-  
-</div>
-<div class="list-group" style="background-color:grey;position:relative;left:50%;transform: translate(-50%, -0%); width:25%;top:30%;text-align: center ">
-  <li class="list-group-item list-group-item-info">Menu</li>
-  <a href="#!/cadastrarEvento/" class="list-group-item">Cadastrar evento</a>
-  <a href="#!/cadastrarUser/" class="list-group-item">Cadastrar perfil do usuário</a>
-  <a href="#!" class="list-group-item">Relatorio </a>
-  <a href="#" class="list-group-item">Gerar Qrcode </a>
+ 
 
+
+
+<div class="jumbotron text-center">
+  <h1>Ponto Dinâmico</h1>
+  <p>Seja bem-vindo ao Ponto Dinâmico</p> 
+</div>
+
+<div class="container">
+  <div class="row">
+    <div class="col-sm-4">
+      <div class="list-group" style="background-color:#fafafa;position:relative;left:50%;transform: translate(-50%, -0%); width:100%;top:30%;text-align: center ">
+    <li class="list-group-item list-group-item-info">Cadastros</li>
+    <a href="#!/cadastrarEvento/" class="list-group-item">Cadastrar evento</a>
+    <a href="#!/cadastrarUser/" class="list-group-item">Cadastrar perfil do usuário</a>
+     <a href="#" class="list-group-item">Gerar Qrcode </a>
+    </div>
+    </div>
+    <div class="col-sm-4">
+      <div class="list-group" style="background-color:#fafafa;position:relative;left:50%;transform: translate(-50%, -0%); width:100%;top:30%;text-align: center ">
+   <li class="list-group-item list-group-item-info">Relatórios</li>
+    <a href="#" class="list-group-item">Relatório por usuário</a>
+    <a href="#" class="list-group-item">Relatório por eventos</a>
+    </div>
+    </div>
+    <div class="col-sm-4">
+     <div class="list-group" style="background-color:#fafafa;position:relative;left:50%;transform: translate(-50%, -0%); width:100%;top:30%;text-align: center ">
+   <li class="list-group-item list-group-item-info">Edição</li>
+    <a href="#" class="list-group-item">Editar usuário</a>
+    </div>
+    </div>
+  </div>
+</div>
 </div>
  
