--- a/app/assets/javascripts/views/login/login.html
+++ b/app/assets/javascripts/views/login/login.html
@@ -2,7 +2,7 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
 
-<div class="container " style="position:relative;transform: translate(0%, 10%); width:30%;top:25%; background-color:	#808080">
+<div class="container " style="position:relative;transform: translate(0%, 25%); width:30%;top:25%; background-color:	#fafafa">
 	
     <img ng-src="/assets/logotipo-nexti.png" alt="NExTI - Nucleo de Extensão em Tecnologia da Informação">
  
@@ -39,7 +39,7 @@
 					<a href="#" class="ls-login-forgot">Esqueci minha senha</a>
 
 					<div style="text-align-last: right">
-						<button class="btn btn-primary" ng-click="vm.logar()">Entrar</button>
+						<button class="btn btn-primary" ng-click="vm.logar()" style="background-color:#007db7">Entrar</button>
 					</div>
 
 
