--- a/app/assets/javascripts/views/nav/nav.html
+++ b/app/assets/javascripts/views/nav/nav.html
@@ -1,10 +1,41 @@
-<div class="collapse navbar-collapse pull-right" ng-controller="NavController as navVM">
-    <ul class="nav navbar-nav">
-        <li ng-show="navVM.sessao.nome"><a href="#!/cadastrarEvento/">/cadastrarEvento</a></li>
-        <li ng-show="navVM.sessao.nome"><a href="#!/home/">/home</a></li>
-        <li ng-hide="navVM.sessao.nome"><a href="#!/login/">/login</a></li>
-        <li ng-show="navVM.sessao.nome"><a href="#!/cadastrarUser/">/cadastrarUser</a></li>
-        <li ng-show="navVM.sessao.nome"><a href="#!/">{{ navVM.sessao.nome }}</a></li>
-        <li ng-show="navVM.sessao.nome"><a ng-click="navVM.sair()">Sair</a></li>
-    </ul>
+<div ng-controller="NavController as navVM">
+    <nav class="navbar navbar-inverse navbar-fixed-top" style="background-color:#007db7;">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>                        
+      </button>
+                <a class="navbar-brand" href="#!/home/" style="color:yellow">Ponto Dinâmico</a>
+            </div>
+            <div class="collapse navbar-collapse" id="myNavbar">
+                <ul class="nav navbar-nav">
+                    <li class="active"><a href="#!/home/" style="background-color:white;color:blue">Home</a></li>
+                    <li class="dropdown">
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#" style="color:yellow">Relatório <span class="caret"></span></a>
+                        <ul class="dropdown-menu" style="background-color:#007db7">
+                            <li><a href="#" style="color:yellow">Usuários</a></li>
+                            <li><a href="#" style="color:yellow">Eventos</a></li>
+
+                        </ul>
+                    </li>
+                    <li class="dropdown">
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#" style="color:yellow">Usuário <span class="caret"></span></a>
+                        <ul class="dropdown-menu" style="background-color:#007db7">
+                            <li><a href="#!/cadastrarUser/" style="color:yellow">cadastrarUser</a></li>
+                            <li><a href="#" style="color:yellow">Edicaouser</a></li>
+
+                        </ul>
+                    </li>
+                    <li><a href="#!/cadastrarEvento/" style="color:yellow">cadastrarEvento</a></li>
+
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="#"><span class="glyphicon glyphicon-user"style="color:yellow"></span> Sign Up</a></li>
+                    <li><a href="#!/login/"><span class="glyphicon glyphicon-log-in"style="color:yellow"></span> Login</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 </div>
