edicao de evento

--- a/app/assets/javascripts/views/home/home.html
+++ b/app/assets/javascripts/views/home/home.html
@@ -23,8 +23,8 @@
     <div class="col-sm-4">
       <div class="list-group" style="background-color:#fafafa;position:relative;left:50%;transform: translate(-50%, -0%); width:100%;top:30%;text-align: center ">
    <li class="list-group-item list-group-item-info">Relatórios</li>
-    <a href="#" class="list-group-item">Relatório por usuário</a>
-    <a href="#" class="list-group-item">Relatório por eventos</a>
+    <a href="#!/relatorioUser/" class="list-group-item">Relatório por usuário</a>
+    <a href="#!/relatorioEvento/" class="list-group-item">Relatório por eventos</a>
     </div>
     </div>
     <div class="col-sm-4">
