parte da integração

--- a/app/assets/javascripts/views/nav/nav.html
+++ b/app/assets/javascripts/views/nav/nav.html
@@ -15,8 +15,8 @@
                     <li class="dropdown">
                         <a class="dropdown-toggle" data-toggle="dropdown" href="#" style="color:yellow">Relatório <span class="caret"></span></a>
                         <ul class="dropdown-menu" style="background-color:#007db7">
-                            <li><a href="#" style="color:yellow">Usuários</a></li>
-                            <li><a href="#" style="color:yellow">Eventos</a></li>
+                            <li><a href="#!/relatorioUser" style="color:yellow">Usuários</a></li>
+                            <li><a href="#!/relatorioEvento" style="color:yellow">Eventos</a></li>
 
                         </ul>
                     </li>
