--- a/app/assets/javascripts/views/nav/nav.html
+++ b/app/assets/javascripts/views/nav/nav.html
@@ -29,6 +29,7 @@
                         </ul>
                     </li>
                     <li><a href="#!/cadastrarEvento/" style="color:yellow">cadastrarEvento</a></li>
+                    <li><a href="#!/listaUser/">Listar</a></li>
 
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
