--- a/app/assets/javascripts/views/home/home.html
+++ b/app/assets/javascripts/views/home/home.html
@@ -5,9 +5,9 @@
 
 
 
-<div class="jumbotron text-center">
+<div class="jumbotron text-center" style="font-family:roboto">
   <h1>Ponto Dinâmico</h1>
-  <p>Seja bem-vindo ao Ponto Dinâmico</p> 
+  <p style="font-family:roboto">Seja bem-vindo ao Ponto Dinâmico</p> 
 </div>
 
 <div class="container">
