--- a/app/views/front/index.html.erb
+++ b/app/views/front/index.html.erb
@@ -48,4 +48,24 @@
 </nav>
   
   <ui-view></ui-view>
+
+<footer class="row">
+<div class="col-md-6">
+<img src="/assets/logotipo-nexti.png" alt="NExTI - Nucleo de Extensão em Tecnologia da Informação">
+</div>
+<div class="col-md-6">
+<h2>Contato</h2>
+
+      <p><span class="glyphicon glyphicon-map-marker"></span> Rua da Conceição, 1228 - S. Miguel
+Juazeiro do Norte, CE
+CEP.: 63010-465</p>
+      <p><span class="glyphicon glyphicon-phone"></span> (88) 3512-3299</p>
+      <p><span class="glyphicon glyphicon-envelope"></span> fap@fapce.edu.br</p> 
+
+</div>
+
+</footer>
+
+<small><h6> © 2017 | NExTI - Nucleo de Extensão em Tecnologia da Informação</h6></small>
+
 </body>
