integração completa por enquanto

--- a/app/assets/javascripts/views/nav/nav.html
+++ b/app/assets/javascripts/views/nav/nav.html
@@ -29,7 +29,8 @@
                         </ul>
                     </li>
                     <li><a href="#!/cadastrarEvento/" style="color:yellow">cadastrarEvento</a></li>
-                    <li><a href="#!/listaUser/">Listar</a></li>
+                    <li><a href="#!/listaUser/">Listar Users</a></li>
+                    <li><a href="#!/listaEvento/">Listar Eventos</a></li>
 
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
