--- a/app/assets/javascripts/views/listaUser/listaUser.html
+++ b/app/assets/javascripts/views/listaUser/listaUser.html
@@ -9,10 +9,10 @@
           <br>
           <label class="radio-inline">Buscar por </label>
           <label class="radio-inline">
-                <input type="radio" ng-model="vm.radio" value="nome" checked='checked'> Nome
+                <input type="radio" name="busc" ng-model="vm.radio" value="nome" checked='checked'> Nome
             </label>
           <label class="radio-inline">
-                <input type="radio" ng-model="vm.radio" value="matricula"> Número da matrícula
+                <input type="radio" name ="busc" ng-model="vm.radio" value="matricula"> Número da matrícula
             </label>
         </div>
         <div class="col-xs-2">
