--- a/app/assets/javascripts/views/listaEvento/listaEvento.html
+++ b/app/assets/javascripts/views/listaEvento/listaEvento.html
@@ -9,10 +9,10 @@
           <br>
           <label class="radio-inline">Buscar por </label>
           <label class="radio-inline">
-                <input type="radio" name="nome" ng-model="vm.radio" value="nome" checked='checked'> Nome do Evento
+                <input type="radio" name="busc" ng-model="vm.radio" value="nome" checked='checked'> Nome do Evento
             </label>
           <label class="radio-inline">
-                <input type="radio" name="data" ng-model="vm.radio" value="data"> Data
+                <input type="radio" name="busc" ng-model="vm.radio" value="data"> Data
             </label>
         </div>
         <div class="col-xs-2">
