--- a/app/assets/javascripts/views/listaEvento/listaEvento.html
+++ b/app/assets/javascripts/views/listaEvento/listaEvento.html
@@ -18,6 +18,7 @@
         <div class="col-xs-2">
           <button type="button" class="btn btn-success" ng-click="vm.buscar()">Buscar</button>
         </div>
+        <button ng-click="vm.RelatEvento()">lista</button>
       </div>
     </form>
   </div>
