--- a/app/assets/javascripts/views/listaUser/listaUser.html
+++ b/app/assets/javascripts/views/listaUser/listaUser.html
@@ -36,7 +36,7 @@
       <div ng-repeat="user in vm.users">
         <tr>
           <td>{{user.id}}</td>
-          <td>{{user.nome>></td>
+          <td>{{user.nome}}</td>
           <td>{{user.matricula}}</td>
         </tr>
       </div>
